--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shimmer: ^2.0.0
   multi_image_picker:
   bcrypt:
+  firebase_core:
 dev_dependencies:
   flutter_test:
     sdk: flutter
